  desk/desktop.rsc: Allow desktop copy/delete operations to be interrupted
  by UNDO key. (RFB)

2014-06-07
- desk/deskfun.c: Fix regression introduced on 2013-03-18: the args to
  par_chk() were incorrect, so alert STBADCOP was never issued. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c: Code cleanup: make the
  function of par_chk() much more obvious. (RFB)
- desk/desk1.c desk/desk1.h desk/deskact.c desk/deskact.h desk/deskdir.c
  desk/deskfpd.h desk/deskfun.c desk/deskfun.h desk/deskmain.c
  desk/desktop.def desk/desktop.rsc: Support desktop 'move files/folders'
  (i.e. copy then delete) like Atari TOS. (RFB)

2014-06-09
- desk/deskfun.c desk/desktop.def desk/desktop.rsc: Issue same error msg
  as Atari TOS when folder creation fails. Suggested by Eero Tamminen. (RFB)

2014-06-14
- bdos/fsdir.c: Fix bug: a cross-directory rename into a full directory
  deleted the entry for the old directory name, resulting in lost clusters. (RFB)

2014-06-17
- bdos/fsdir.c: Tidy up xrmdir(): fix formatting and add comments. (RFB)
- bdos/fsdir.c: Code cleanup: remove useless test in xrmdir(). (RFB)
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: replace 0xe5
  with #define. (RFB)

2014-06-18
- printbss.sh: New script. Display the BSS usage of each subdirectory. (VRI)

2014-07-01
- bdos/fs.h bdos/fsbuf.c bdos/fsdir.c: Code cleanup: move packit() and
  make it local. (RFB)

2014-07-06
- bdos/fsdir.c: Fix bug: do not allow folder to be renamed to the same name
  as an existing folder. (RFB)

2014-07-07
- bdos/fsdir.c: Fix bug: do not reference OFD after it has been freed. (RFB)
- bdos/fsdir.c: Fix bug: for cross-directory rename, the cluster number in
  the .. entry of the renamed folder was incorrect when the target was the
  root directory. (RFB)
- bdos/fsdir.c: Fix bug: update the DND when a directory is renamed. (RFB)
- bdos/fsdir.c: Code cleanup: format entire module in one style, with
  consistent indenting and whitespace usage. (RFB)